--- a/captainJackSparrow/test-output/index.html
+++ b/captainJackSparrow/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\Arun\eclipse-workspace\captainJackSparrow\testng.xml</span>
+                    <span>C:\Users\Arun\git\Padmanabhasimha\captainJackSparrow\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Arun\eclipse-workspace\captainJackSparrow\testng.xml</span>
+            <span class="header-content">C:\Users\Arun\git\Padmanabhasimha\captainJackSparrow\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -202,12 +202,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'coursesTest')
 data.setCell(0, 2, 'testCases.CourseraTest')
-data.setCell(0, 3, 181067);
+data.setCell(0, 3, 27566);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 minutes</span>
+              <span class="suite-total-time">Total running time: 27 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -240,11 +240,11 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">coursesTest</span>
-                <span class="method-start">6207 ms</span>
+                <span class="method-start">6039 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closingBrowser</span>
-                <span class="method-start">187277 ms</span>
+                <span class="method-start">33613 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
