--- a/captainJackSparrow/test-output/old/Suite/methods-alphabetical.html
+++ b/captainJackSparrow/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dc939b">  <td>20/08/25 15:44:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CourseraTest.closingBrowser()[pri:0, instance:testCases.CourseraTest@3d8314f0]">&lt;&lt;closingBrowser</td> 
-<td>&nbsp;</td>  <td>main@1889248251</td>   <td></td> </tr>
-<tr bgcolor="dc939b">  <td>20/08/25 15:41:01</td>   <td>-181070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CourseraTest.coursesTest()[pri:0, instance:testCases.CourseraTest@3d8314f0]">coursesTest</td> 
-  <td>main@1889248251</td>   <td></td> </tr>
-<tr bgcolor="dc939b">  <td>20/08/25 15:40:55</td>   <td>-187275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CourseraTest.openBrowser()[pri:0, instance:testCases.CourseraTest@3d8314f0]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1889248251</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>20/08/26 23:52:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CourseraTest.closingBrowser()[pri:0, instance:testCases.CourseraTest@2473b9ce]">&lt;&lt;closingBrowser</td> 
+<td>&nbsp;</td>  <td>main@37380050</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>20/08/26 23:52:29</td>   <td>-27576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CourseraTest.coursesTest()[pri:0, instance:testCases.CourseraTest@2473b9ce]">coursesTest</td> 
+  <td>main@37380050</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>20/08/26 23:52:23</td>   <td>-33613</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CourseraTest.openBrowser()[pri:0, instance:testCases.CourseraTest@2473b9ce]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@37380050</td>   <td></td> </tr>
 </table>
