--- a/captainJackSparrow/test-output/old/Suite/classes.html
+++ b/captainJackSparrow/test-output/old/Suite/classes.html
@@ -15,6 +15,11 @@
 <td>Regression </td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>validatePageTitles</td>
+<td>Smoke </td>
+</tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
