--- a/captainJackSparrow/test-output/old/Suite/groups.html
+++ b/captainJackSparrow/test-output/old/Suite/groups.html
@@ -1,3 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
 <tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>CourseraTest.coursesTest()[pri:1, instance:testCases.CourseraTest@71d15f18]<br/></td></tr>
+<tr><td>Smoke</td><td>CourseraTest.validatePageTitles()[pri:0, instance:testCases.CourseraTest@71d15f18]<br/></td></tr>
 </table>
