--- a/captainJackSparrow/test-output/old/Suite/methods-alphabetical.html
+++ b/captainJackSparrow/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c2a581">  <td>20/08/27 23:47:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CourseraTest.closingBrowser()[pri:0, instance:testCases.CourseraTest@71d15f18]">&lt;&lt;closingBrowser</td> 
-<td>&nbsp;</td>  <td>main@1890627974</td>   <td></td> </tr>
-<tr bgcolor="c2a581">  <td>20/08/27 23:46:27</td>   <td>-49226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CourseraTest.coursesTest()[pri:1, instance:testCases.CourseraTest@71d15f18]">coursesTest</td> 
-  <td>main@1890627974</td>   <td></td> </tr>
-<tr bgcolor="c2a581">  <td>20/08/27 23:46:24</td>   <td>-52214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CourseraTest.openBrowser(java.lang.String)[pri:0, instance:testCases.CourseraTest@71d15f18]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1890627974</td>   <td></td> </tr>
+<tr bgcolor="c2a581">  <td>20/08/31 09:43:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CourseraTest.closingBrowser()[pri:0, instance:testCases.CourseraTest@71d15f18]">&lt;&lt;closingBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1125461667</td>   <td></td> </tr>
+<tr bgcolor="c2a581">  <td>20/08/31 09:44:59</td>   <td>65529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CourseraTest.closingBrowser()[pri:0, instance:testCases.CourseraTest@71d15f18]">&lt;&lt;closingBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1125461667</td>   <td></td> </tr>
+<tr bgcolor="c2a581">  <td>20/08/31 09:44:00</td>   <td>6620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CourseraTest.coursesTest()[pri:1, instance:testCases.CourseraTest@71d15f18]">coursesTest</td> 
+  <td>TestNG-tests-1@1125461667</td>   <td></td> </tr>
+<tr bgcolor="c2a581">  <td>20/08/31 09:43:29</td>   <td>-24500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CourseraTest.openBrowser(java.lang.String)[pri:0, instance:testCases.CourseraTest@71d15f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1125461667</td>   <td></td> </tr>
+<tr bgcolor="c2a581">  <td>20/08/31 09:43:55</td>   <td>1319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CourseraTest.openBrowser(java.lang.String)[pri:0, instance:testCases.CourseraTest@71d15f18]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1125461667</td>   <td></td> </tr>
+<tr bgcolor="c2a581">  <td>20/08/31 09:43:35</td>   <td>-18511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CourseraTest.validatePageTitles()[pri:0, instance:testCases.CourseraTest@71d15f18]">validatePageTitles</td> 
+  <td>TestNG-tests-1@1125461667</td>   <td></td> </tr>
 </table>
